<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff9e5e"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbarSize="40dp"
    tools:context=".login">


 <TextView
     android:id="@+id/textView3"
     android:layout_width="367dp"
     android:layout_height="159dp"
     android:fontFamily="@font/bangers"
     android:gravity="center|center_horizontal|center_vertical"
     android:scrollbarSize="30dp"
     android:text="@string/welcome_to_tic_tac_toc"
     android:textSize="30sp" />

 <TextView
     android:id="@+id/textView6"
     android:layout_width="233dp"
     android:layout_height="48dp"
     android:fontFamily="@font/wendy_one"
     android:scrollbarSize="18dp"
     android:text="@string/hello_there_welcome_back"
     android:textSize="18sp" />

 <TextView
     android:id="@+id/textView7"
     android:layout_width="match_parent"
     android:layout_height="32dp"
     android:fontFamily="@font/carter_one"
     android:hint="@string/sign_in_to_contine"
     android:scrollbarSize="20dp"
     android:textSize="20sp" />

 <EditText
     android:id="@+id/editTextTextEmailAddress2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
     android:fontFamily="@font/carter_one"
     android:hint="@string/username"
     android:inputType="textEmailAddress"
     android:importantForAutofill="no" />

 <EditText
     android:id="@+id/editTextTextPassword3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
     android:fontFamily="@font/carter_one"
     android:hint="@string/password"
     android:inputType="textPassword"
     android:autofillHints="" />

 <Button
     android:id="@+id/button2"
     android:layout_width="188dp"
     android:layout_height="wrap_content"
     android:scrollbarSize="14sp"
     android:text="@string/forget_password"
     android:textSize="12sp" />

 <Button
     android:id="@+id/button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="continue" />

 <TextView
     android:id="@+id/textView5"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center|center_horizontal|center_vertical"
     android:text="@string/or" />

 <Button
     android:id="@+id/button4"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center|center_vertical"
     android:text="Sign up" />

 <Button
     android:id="@+id/button7"
     android:layout_width="194dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center|center_horizontal|center_vertical"
     android:foregroundGravity="center_vertical|center_horizontal"
     android:gravity="center|center_horizontal|center_vertical"
     android:text="@string/skip" />


</LinearLayout>